# physfit

./: .gitignore  README.md  pyproject.toml
egs/: savefigs.py
src/physfit/: __init__.py  physfit.py
tools/: pypipush.sh
