[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "physfit"
authors = [
    {name = "Daniel Wagenaar", email = "daw@caltech.edu"},
]
description = "Function fitting with errors on x and y"
readme = "README.md"
version = "0.9.0"
dependencies = [
    "numpy",
    "scipy",
]
requires-python = ">=3.8"
classifiers = [ 
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/wagenadl/physfit"

